--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 			margin: 0;
 			padding: 0;
 		}
+		.bg{
+		background-image:url("h1.png");
+		background-repeat:no-repeat;
+			background-size: auto;
+			background-position: center;
+			height:500px;
+			background-color:black;
+		
+		}
+		
 	</style>
 	<script>
 		function initMap() {
@@ -161,12 +171,11 @@
 
 
 
-<div class="w3-opacity-max">
+<div class="bg">
 <span class="w3-button w3-medium w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 
-<header class="w3-center w3-margin-bottom">
-  <h1><b>H1Z1 Crate Locations</b></h1>
-  <p><b>Playstation Edition</b></p>
+<header class="bg w3-center w3-margin-bottom">
+ 
   
 </header>
 </div>
